--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,25 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="../thirdparty/leaflet-0.7.5/leaflet-src.js"></script>
-	<script src="../thirdparty/leaflet-0.7.5/leaflet.js"></script>
 	<script src="../js/index.js"></script>
-	<link rel="stylesheet" type="text/css" href="../thirdparty/leaflet-0.7.5/leaflet.css">
+	<link rel="stylesheet" type="text/css" href="../css/index.css">
+	<link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>	
+	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
-	<div id='map' style='height:100%'></div>
+	<div class='header'>
+		<div class='logo'></div>
+		<ul>
+		  <li><a>DONATE</a></li>
+		  <li><a>PROJECTS</a></li>
+		  <li><a>ABOUT</a></li>
+		</ul>
+	</div>
+	<div class='banner'>
+		<div class='quote'>
+			<div class='bigQuote'><span id='first'>Change the world,</span> <span id='second'>one village at a time...</span> </div>
+			<div class='smallQuote'>(Bharog Baneri, Himachal Pradesh, India)</div>
+		</div>
+	</div>
 </body>
