Added new background and other formatting

--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 	<div class='header'>
-		<div class='logo'></div>
+		<div class='logo'>PROJECT RISHI</div>
 		<ul>
-		  <li><a>DONATE</a></li>
-		  <li><a>PROJECTS</a></li>
-		  <li><a>ABOUT</a></li>
+		  <li><a id='navBarThird'>DONATE</a></li>
+		  <li><a id='navBarSecond'>PROJECTS</a></li>
+		  <li><a id='navBarFirst'>ABOUT</a></li>
 		</ul>
 	</div>
 	<div class='banner'>
