Sample 2 Initial commit

--- a/html/index.html
+++ b/html/index.html
@@ -3,23 +3,20 @@
 	<script src="../js/index.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
 	<link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>	
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-
-</head>
+	<link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Bowlby+One+SC|Trade+Winds|Emblema+One' rel='stylesheet' type='text/css'></head>
 <body>
 	<div class='header'>
-		<div class='logo'>PROJECT RISHI</div>
+		<div class='logo'></div>
 		<ul>
-		  <li><a id='navBarThird'>DONATE</a></li>
-		  <li><a id='navBarSecond'>PROJECTS</a></li>
-		  <li><a id='navBarFirst'>ABOUT</a></li>
+		  <li><a id='donate'>DONATE</a></li>
+		  <li><a id='projects'>PROJECTS</a></li>
+		  <li><a id='about'>ABOUT</a></li>
 		</ul>
 	</div>
-	<div class='banner'>
-		<div class='quote'>
-			<div class='bigQuote'><span id='first'>Change the world,</span> <span id='second'>one village at a time...</span> </div>
-			<div class='smallQuote'>(Bharog Baneri, Himachal Pradesh, India)</div>
-		</div>
+	<div class='quote'>
+		<div id="first" class='bigQuote'>Explore...</div>
 	</div>
 </body>
