--- a/html/index.html
+++ b/html/index.html
@@ -2,11 +2,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="../js/index.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
-	<link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Bowlby+One+SC|Trade+Winds|Emblema+One' rel='stylesheet' type='text/css'></head>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:800' rel='stylesheet' type='text/css'>
 <body>
 	<div class='header'>
 		<div class='logo'></div>
