--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,15 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<!-- <script src="../thirdparty/leaflet-0.7.5/leaflet-src.js"></script>
-	<script src="../thirdparty/leaflet-0.7.5/leaflet.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBr3yxX-FQ2OQA7htomKy5-5JVJ5j8MFzk"></script>
 	<script src="../js/index.js"></script>
-	<link rel="stylesheet" type="text/css" href="../thirdparty/leaflet-0.7.5/leaflet.css"> -->
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
 </head>
+
 <body>
 	<div class='container'>
-		<div class='sidebar'></div>
-		<div class='mapholder'>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1550.4098653389483!2d77.51344157599607!3d30.56024308594923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzDCsDMzJzM2LjIiTiA3N8KwMzAnNDkuNCJF!5e1!3m2!1sen!2sus!4v1447215986968" width="50" height="450" frameborder="0" style="border:0" allowfullscreen> </iframe>
+		<div class='sidebar'>
+			<table id='filters'></table>
 		</div>
-		<!-- <div id='map' class='mapholder'></div> -->
+		<div class='map'></div>
 	</div>
 </body>
