getting started with HOBB

--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,15 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="../thirdparty/leaflet-0.7.5/leaflet-src.js"></script>
-	<script src="../thirdparty/leaflet-0.7.5/leaflet.js"></script>
 	<script src="../js/index.js"></script>
-	<link rel="stylesheet" type="text/css" href="../thirdparty/leaflet-0.7.5/leaflet.css">
+	<link rel="stylesheet" type="text/css" href="../css/index.css">
 </head>
+
 <body>
-	<div id='map' style='height:100%'></div>
+	<div class='container'>
+		<div class='story'>
+			<div class='img_container'>
+				<img src='../assets/woman1.JPG'/>
+			</div>
+		</div>
+	</div>
 </body>
