--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="../js/index.js"></script>
-	<link rel="stylesheet" type="text/css" href="../css/index.css">
+	<script src="../app/assets/javascripts/index.js"></script>
+	<link rel="stylesheet" type="text/css" href="../app/assets/stylesheets/index.css">
 	<link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>	
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
